# ASABE-2020

./: ._SerialTest.txt  .gitignore  Competition_gui.py  Copy of competition_gui.py  LineCorrection.py  MessageSender.py  README.md  SerialTest.txt  bringup.py  contourLines.py  contours.py  lineTracing.py  lineTracing2.py  lineTracingNew.py  main.py  robertreport.tex  stateMachine.py  test.py
caroline-stuff/: contouring.py  lineTracing.py  lineTracing3.py  main.py  newthings.py
drive/: drive.py  filmingStuff.py  joystick.py  test.py
drive/C++/: CMakeCache.txt  CMakeLists.txt  CorrectionTest  Makefile  cmake_install.cmake  makefile  test.cpp  wtf  wtf.cpp
drive/C++/DynamixelJSON/: AX12.json  MX106.json  MX12.json  MX64.json
drive/C++/DynamixelSDK/src/: DynamixelSDK.h
drive/C++/DynamixelSDK/src/dynamixel_sdk/: packet_handler.h  protocol1_packet_handler.h  protocol2_packet_handler.h
drive/C++/LineCorrection/: LineCorrection.cpp  LineCorrection.h  linecorrection.cpp  linecorrection.h
drive/C++/Movement/: makefile
drive/C++/Movement/Motor/: Motor.cpp  Motor.h
drive/C++/Movement/Robot/: Robot.cpp  Robot.h  RobotWrapper.cpp
drive/C++/cget/cget/: cget.cmake
drive/C++/cget/cget/pkg/nlohmann__json/install/lib/cmake/nlohmann_json/: nlohmann_jsonConfigVersion.cmake
drive/C++/cget/cget/pkg/pybind__pybind11/install/share/cmake/pybind11/: pybind11Config.cmake  pybind11ConfigVersion.cmake
drive/C++/cget/include/dynamixel-controller/: CMakeCache.txt  CMakeLists.txt  DynamixelIO.cpp  DynamixelMotor.cpp  Makefile  cmake_install.cmake  dynio.h  main  main.cpp
drive/C++/cget/include/dynamixel-controller/DynamixelJSON/: MX28.json
drive/C++/dynIO/: dynIO.c++  dynIO.h
drive/C++/linecorrection/: linecorrection.cpp  linecorrection.h
drive/C++/robot/: robot.cpp  robot.h
drive/C++/robot/Robot/: robot.cpp  robot.h
drive/C++/robot/motor/: motor.cpp  motor.h
drive/LineCorrection/: LineCorrection.py
drive/LineTracing/: lineTracing.py
drive/Python/: test.py
drive/Robot/: Motor.py  Robot.py
dynamixel/: dynamixel_controller.py
dynamixel/DynamixelJSON/: MX12_28_Protocol_1.json
fsm/: stateMachine.py
utilities/autocrop/: Readme.md  autocrop.py
utilities/autosort/: Readme.md  autosort.py
utilities/debug-messages/: test.py~
utilities/debugmessages/: debugmessages.py  debugmessages.py~
utilities/dynaconfig/: dynaconfig.py
utilities/image-capture/: Readme.md  image-capture.py
vision/: test.py
vision/dynamixel-trigger/: dynamixel-trigger.py
vision/dynamixeltrigger/: README.md  dynamixeltrigger.py  test.py
vision/image-capture/: image-capture.py
vision/imagecapture/: README.md  imagecapture.py
vision/imageclassifier/: ImgClassifier.py~  test.py  (+4 more)
(+4 files in other folders)
